# multidb-routing

./: .env.example  .gitignore  BENCHMARK.md  README.md  pyproject.toml
data/bird/: databases.jsonl  summary.json
data/multidb/: databases.jsonl  summary.json
data/spider/: databases.jsonl  summary.json
results/: RESULTS.md  agent-260612-final-routing-full-eval-engine-split.md  agent-flow-260614-final-routing-variants.md  agent-flow-scenario60-preliminary-260610.md  agent-rerank-260611-small-scale-decomp-vs-holistic.md  benchmark-260614-full-retrieval-semantic-layers.md  benchmark-260614-status-and-runtime-projection.md  benchmark-260618-complete-spec-multitype-routing.md  research-260610-card-adjacency-structure.md  research-260610-query-informed-card.md  research-260611-rescue-flow-design.md  research-260618-connectivity-adjacency-extensions.md  retrieval-260611-0512-v2-headtohead-card-vs-raw.md  retrieval-260611-robustness-query-side-spidersyn-realistic.md  retrieval-260614-pipeline-triage-vs-sudarshan.md
results/figs/: report.css
results/visuals/: benchmark-structure-current.html  scoring-vs-sudarshan-final-selection.html
scripts/: README.md  download_datasets.py
scripts/registry/: augment_schemas.py  build_multi_corpus.py  build_multi_queries.py
scripts/setups/: build_sudarshan_repro.py
scripts/tier/: bson_schema.py  fetch_bird_json_remote.py  sources.py
src/agent/: benchmark.py  router.py  stages.py
src/baselines/: embedding.py  zeroshot.py
src/clients/: openrouter.py
src/core/: index.py  openrouter.py  rerank.py  retrieval.py  scoring.py  (+1 more)
(+202 files in other folders)
